FIx overlapped log form toggle button

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -20,7 +20,7 @@ input[type=number] {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  z-index: 1000;
+  z-index: 3000 !important;
   background: transparent;
   border: 2px solid #7ad069;
   color: #7ad069;
